# openjazz

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.cpp  setup.cpp
src/game/: gamemode.h
src/io/: controls.h  file.cpp  file.h  sound.cpp
src/io/gfx/: anim.h  font.cpp  font.h  paletteeffects.h  sprite.cpp  sprite.h  video.cpp  video.h
src/jj1bonuslevel/: jj1bonuslevel.h
src/jj1bonuslevel/jj1bonuslevelplayer/: jj1bonuslevelplayer.h
src/jj1level/: jj1level.h  jj1levelframe.cpp  jj1levelload.cpp
src/jj1level/jj1levelplayer/: jj1levelplayer.h
src/jj1planet/: jj1planet.cpp  jj1planet.h
src/jj1scene/: jj1scene.cpp  jj1scene.h
src/jj2level/: jj2level.cpp  jj2level.h  jj2levelload.cpp
src/jj2level/jj2levelplayer/: jj2levelplayer.h
src/level/: level.cpp  levelplayer.h
src/menu/: gamemenu.cpp  mainmenu.cpp  menu.cpp  menu.h  plasma.cpp  plasma.h  setupmenu.cpp
