PROJECT(OpenJazz)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -DUSE_SOCKETS -DSCALE")

FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(SDL REQUIRED)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/" ${SDL_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR})

FILE(GLOB_RECURSE SRC_LIST "${CMAKE_SOURCE_DIR}/src/*.cpp")
FILE(GLOB PLATFORM_SPECIFIC "${CMAKE_SOURCE_DIR}/src/platforms/*.cpp")
LIST(REMOVE_ITEM SRC_LIST ${PLATFORM_SPECIFIC})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBRARY} ${ZLIB_LIBRARIES})
