PROJECT(OpenJazz)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0 FATAL_ERROR)

OPTION(LINUX_FHS "Use Linux FHS paths" ON)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

ADD_DEFINITIONS(-DUSE_SOCKETS -DSCALE -DUSE_MODPLUG)

IF(LINUX_FHS)
ADD_DEFINITIONS(-DLINUX_FHS)
ENDIF()

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(MODPLUG libmodplug)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/" ${SDL_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR} ${MODPLUG_INCLUDE_DIRS})

FILE(GLOB_RECURSE SRC_LIST "${CMAKE_SOURCE_DIR}/src/*.cpp")
FILE(GLOB PLATFORM_SPECIFIC "${CMAKE_SOURCE_DIR}/src/platforms/*.cpp")
LIST(REMOVE_ITEM SRC_LIST ${PLATFORM_SPECIFIC})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBRARY} ${ZLIB_LIBRARIES} ${MODPLUG_LIBRARIES})

SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
